# Py5G

./: .gitignore  pyproject.toml
py5g/: __init__.py  acronyms.py  arfcn.py  bands.py  bw.py  calc.py  freq.py  gscn.py  guardband.py
